--- a/beapi.tex
+++ b/beapi.tex
@@ -78,29 +78,29 @@ La principal ventaja de \textsf{BEAPI} es que requiere un esfuerzo mínimo de es
 \cacho{TODO: no se si agregar arbolitos para explicarlos}
 \\
 \\
-\begin{tikzpicture}
-    [level 1/.style={sibling distance=27mm},
-   level 2/.style={sibling distance=25mm},
-   every node/.style={rectangle,draw,fill=white,minimum size=10mm,align=center,font=\tiny},
-   edge from parent/.style={draw}]
+% \begin{tikzpicture}
+%     [level 1/.style={sibling distance=27mm},
+%    level 2/.style={sibling distance=25mm},
+%    every node/.style={rectangle,draw,fill=white,minimum size=10mm,align=center,font=\tiny},
+%    edge from parent/.style={draw}]
    
-  % Raíz
-  \node {n = new NCL()}
-    % Hijos
-    child {node {n = new NCL() \\
-                n.add(int)}
-      child {node {n = new NCL() \\
-                    n.method()}}
-      child {node {n = new NCL() \\
-                    n.anotherMethod()}}
-    }
-   child {node {n = new NCL() \\
-                n.addFirst()}}
-   child {node {n = new NCL() \\
-                n.remove()}}
-    child {node {...}}
-    % child {node {Método N}};
-\end{tikzpicture}
+%   % Raíz
+%   \node {n = new NCL()}
+%     % Hijos
+%     child {node {n = new NCL() \\
+%                 n.add(int)}
+%       child {node {n = new NCL() \\
+%                     n.method()}}
+%       child {node {n = new NCL() \\
+%                     n.anotherMethod()}}
+%     }
+%    child {node {n = new NCL() \\
+%                 n.addFirst()}}
+%    child {node {n = new NCL() \\
+%                 n.remove()}}
+%     child {node {...}}
+%     % child {node {Método N}};
+% \end{tikzpicture}
 
 
 
