--- a/main.tex
+++ b/main.tex
@@ -85,9 +85,9 @@
 %\include{titlepage}
 \include{titlepage-famaf}
 
-\include{resumen}
-\pagenumbering{roman}
-\pagestyle{plain}
+% \include{resumen}
+% \pagenumbering{roman}
+% \pagestyle{plain}
 % \include{agradecimientos}
 \tableofcontents
 \cleardoublepage
@@ -107,7 +107,7 @@
 \include{builders}
 \include{beapi}
 \include{evaluacion}
-% \include{Builders Identification}
+\include{Builders Identification}
 \include{conclusiones}
 \include{trabajofuturo}
 
