--- a/Bibliografia.bib
+++ b/Bibliografia.bib
@@ -14,7 +14,28 @@
 }
 
 
+@book{goldberg1989genetic,
+  author = {Goldberg, David E.},
+  title = {Genetic Algorithms in Search, Optimization, and Machine Learning},
+  year = {1989},
+  publisher = {Addison-Wesley},
+}
 
+@book{Cormen2009,
+  author = {Cormen, Thomas H. and Leiserson, Charles E. and Rivest, Ronald L. and Stein, Clifford},
+  title = {Introduction to Algorithms},
+  year = {2009},
+  edition = {3rd},
+  publisher = {MIT Press}
+}
+
+@book{kleinberg2006,
+  author = {Kleinberg, Jon and Tardos, {\'E}va},
+  title = {Algorithm Design},
+  edition = {1st},
+  publisher = {Addison-Wesley Professional},
+  year = {2006}
+}
 
 @misc{reppack,
 	Date-Added = {2018-11-20 05:43:45 +0000},
