--- a/beapi.tex
+++ b/beapi.tex
@@ -1,4 +1,4 @@
-\chapter*{Generacion Exhaustiva acotada desde API de los programas (FASE 23)}
+\chapter{Generacion Exhaustiva acotada desde API de los programas (FASE 23)}
 
 
 \label{cap:beapi}
