--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,6 @@
 %\documentclass[10pt]{report} %twoside para impresion final 
 \documentclass[11pt,a4paper,openany]{report} %a4paper,
-\usepackage{array}
+
 \makeatletter
 \renewcommand*\@argarraycr{\let\@tempa\relax%
   \ifnum0=`{\fi}\@argarraycr@}
@@ -8,8 +8,8 @@
 
 % Note: Make all your adjustments in here
 \input{classicthesis-config}
+\usepackage{array}
 \usepackage{xcolor}
-\newcommand{\cacho}{\textcolor{red}}
 \usepackage{tikz}
 \usepackage{multirow}
 \usepackage{underscore}
@@ -19,26 +19,26 @@
 \usepackage{fancyhdr}
 \usepackage{lineno}     % Line numbers with e.g. the linenumbers environment
 \usepackage{sectsty}    % \allsectionsfont{}, \chapterfont{}, \sectionfont{}
+\usepackage[misc]{ifsym}
+\usepackage{tikz}
 
+ % Add new own commands
+\newcommand{\cacho}{\textcolor{red}}
 
-\usepackage{titletoc}
-\usepackage{tocloft}
+%Indice
 \renewcommand{\cftchapleader}{\cftdotfill{\cftdotsep}} % Agrega puntos para las secciones
-
 \titlecontents{chapter}
   [0em]
   {\vspace{1em}\bfseries}
   {\thecontentslabel.\enspace}
   {}
   {\hfill\contentspage} % Mueve el número de página a la derecha
-
 \titlecontents{section}
   [2em]
   {}
   {\thecontentslabel.\enspace}
   {}
   {\titlerule*[0.75em]{.}\contentspage} % Agrega líneas de puntos para las secciones
-
 \titlecontents{subsection}
   [4.5em]
   {}
@@ -46,20 +46,20 @@
   {}
   {\titlerule*[0.75em]{.}\contentspage} % Agrega líneas de puntos para las subsecciones
 
-
+%Formato para chapter
 \titleformat{\chapter}[display]
   {\normalfont\huge\bfseries}{\chaptertitlename\ \thechapter}{20pt}{\Huge}
 \titlespacing*{\chapter}{0pt}{50pt}{40pt}
-
-\renewcommand{\cftsecleader}{\cftdotfill{\cftdotsep}} % Línea de puntos para secciones
-\renewcommand{\cftsubsecleader}{\cftdotfill{\cftdotsep}} % Línea de puntos para subsecciones
-
-% Eliminar encabezados
 % Configuración del estilo de página
-\pagestyle{fancy}
-\fancyhf{} % Limpiar encabezados y pies de página
-\fancyfoot[C]{\thepage} % Número de página centrado en el pie de página
-\renewcommand{\headrulewidth}{0pt} % Eliminar línea del encabezado
+\fancypagestyle{mypagestyle}{
+    \fancyhf{} % Limpiar encabezado y pie de página
+    \renewcommand{\headrulewidth}{0pt} % Eliminar la línea horizontal del encabezado
+    \fancyfoot[C]{\thepage} % Número de página alineado a la derecha en el pie de página
+}
+
+% Aplicar el estilo de página a todo el documento
+\pagestyle{mypagestyle}
+
 \babelhyphenation[spanish]{Node-Caching-Linked-List}
 \definecolor{dkgreen}{rgb}{0,0.6,0}
 \usepackage{listings}
@@ -81,7 +81,10 @@
         numbers=left,
         xleftmargin=.05\textwidth
       }
-
+\usepackage{algorithm}
+\usepackage{algorithmicx}
+\usepackage{algorithm2e}
+\usepackage{algorithmic}
 
 \lstnewenvironment{algorithm1}[1][] %defines the algorithm listing environment
 {   
@@ -110,9 +113,6 @@
 {}
 
 
-\usepackage[misc]{ifsym}
-\usepackage{tikz}
-
 
 
 %%%%  Contenido  %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -124,7 +124,6 @@
 
 % ********************************************************************
 % Frontmatter
-%\include{titlepage}
 \include{titlepage-famaf}
 \chapter*{}
 \pagenumbering{Roman} % para comenzar la numeracion de paginas en numeros romanos
@@ -149,6 +148,7 @@
 % \pagestyle{headings}
 \cleardoublepage
 \pagenumbering{arabic} % para empezar la numeración con números
+\setcounter{page}{7}
 
 \include{introduccion}
 \cleardoublepage
