--- a/preliminaries.tex
+++ b/preliminaries.tex
@@ -18,7 +18,8 @@ y \texttt{T} no es redundante, entonces, \texttt{T} se agrega al conjunto de pru
 % \textsf{BEAPI} se basa en \textsf{Randoop}, pero en lugar de la generación aleatoria, tiene como objetivo generar \emph{todas} las secuencias de pruebas factibles (acotadas), dentro de un alcance dado. La retroalimentación de la ejecución permite a \textsf{BEAPI} descartar pruebas ilegales durante el proceso de generación. Además, al estar basado en una generación de pruebas dirigida por retroalimentación, \textsf{BEAPI} genera una secuencia de prueba para cada estructura en el conjunto exhaustivo acotado que construye. Como se argumenta en la Sección [TODO], esta representación favorece la comprensibilidad y la reutilización de las pruebas generadas con respecto a los enfoques basados en especificaciones relacionados.
 
 \section{Algoritmo Geneticos}
-Los algoritmos genéticos (AG) son una técnica de búsqueda y optimización que se inspira en la evolución biológica. Se utilizan para resolver problemas de búsqueda, especialmente problemas de optimización, imitando el proceso de evolución natural. A través de un proceso evolutivo basado en elecciones aleatorias guiadas, los algoritmos genéticos exploran un espacio de soluciones en busca de la mejor solución posible.
+\label{sec:geneticoPrev}
+Los algoritmos genéticos (AG) \cite{goldberg1989genetic} son una técnica de búsqueda y optimización que se inspira en la evolución biológica. Se utilizan para resolver problemas de búsqueda, especialmente problemas de optimización, imitando el proceso de evolución natural. A través de un proceso evolutivo basado en elecciones aleatorias guiadas, los algoritmos genéticos exploran un espacio de soluciones en busca de la mejor solución posible.
 Para abordar un problema utilizando un algoritmo genético, es necesario contar con los siguientes componentes:
 
 \begin{itemize}
@@ -27,7 +28,7 @@ Para abordar un problema utilizando un algoritmo genético, es necesario contar 
 
     \item \textbf{Población inicial}: La población inicial del algoritmo genético está formada por un conjunto de cromosomas que codifican soluciones candidatas al problema. Los genes de estos cromosomas son seleccionados aleatoriamente. El tamaño de la población inicial se define a priori y se mantiene constante durante las iteraciones del algoritmo.
 
-    \item \textbf{Funcion de Fitness}: La función de aptitud (también conocida como función de fitness) es una función que mide la calidad de un cromosoma o solución candidata. Evalúa cuán bien resuelve el problema la solución representada por el cromosoma. Durante la evolución del algoritmo, el objetivo es optimizar esta función, es decir, encontrar el individuo de la población con el mayor (o menor) valor de aptitud según el objetivo del problema.
+    \item \textbf{Función de Fitness}: La función de aptitud (también conocida como función de fitness) es una función que mide la calidad de un cromosoma o solución candidata. Evalúa cuán bien resuelve el problema la solución representada por el cromosoma. Durante la evolución del algoritmo, el objetivo es optimizar esta función, es decir, encontrar el individuo de la población con el mayor (o menor) valor de aptitud según el objetivo del problema.
 
 \item \textbf{Operadores genéticos}: Los operadores genéticos son las herramientas mediante las cuales se generan nuevas soluciones a partir de soluciones existentes. Los principales operadores son:
     \begin{itemize}
@@ -38,7 +39,7 @@ Para abordar un problema utilizando un algoritmo genético, es necesario contar 
     \item \textbf{Mutación}: Introduce cambios aleatorios en un cromosoma para explorar nuevas regiones del espacio de soluciones. La mutación permite evitar la convergencia prematura y mantener la diversidad genética en la población.
     \end{itemize}
 
-\item \textttt{Parámetros}: El algoritmo genético recibe una serie de parámetros que deben ajustarse para su ejecución. Algunos de los parámetros comunes incluyen el tamaño máximo de la población, el número de iteraciones, las tasas de mutación y cruce, y los criterios de convergencia.
+\item \textbf{Par\'ametros}: El algoritmo genético recibe una serie de parámetros que deben ajustarse para su ejecución. Algunos de los parámetros comunes incluyen el tamaño máximo de la población, el número de iteraciones, las tasas de mutación y cruce, y los criterios de convergencia.
 \end{itemize}
 
 A continuación, se describen las etapas principales del algoritmo genético y para explicar un algoritmo genético estándar :
@@ -56,33 +57,73 @@ Evaluar la aptitud de cada cromosoma en $P$\;
     Aplicar operador de cruce para generar descendencia\;\\
     Aplicar operador de mutación a la descendencia\;\\
     Evaluar la aptitud de los nuevos cromosomas\;\\
-    Reemplazar cromosomas menos aptos en $P$ por la descendencia\;
+    % Reemplazar cromosomas menos aptos en $P$ por la descendencia\;
 }
 \caption{Algoritmo Genético}
 \end{algorithm}
 
 \begin{itemize}
 
-\item \textttt{Inicialización}: En esta etapa, se crea la población inicial de cromosomas aleatorios. Los cromosomas se generan codificando soluciones candidatas al problema.
+\item \textbf{Inicialización}: En esta etapa, se crea la población inicial de cromosomas aleatorios. Los cromosomas se generan codificando soluciones candidatas al problema.
 
-\item \textttt{Evaluacion}: En esta etapa, se evalúa la aptitud de cada cromosoma en la población utilizando la función de aptitud. La aptitud se utiliza para guiar la búsqueda y seleccionar los cromosomas más aptos para reproducirse.
+\item \textbf{Evaluacion}: En esta etapa, se evalúa la aptitud de cada cromosoma en la población utilizando la función de aptitud. La aptitud se utiliza para guiar la búsqueda y seleccionar los cromosomas más aptos para reproducirse.
 
-\item \textttt{Seleccion}: En esta etapa, se seleccionan los cromosomas más aptos para reproducirse y formar la próxima generación de la población. Los métodos de selección pueden variar, pero generalmente se utiliza la selección por torneo o la selección proporcional al valor de aptitud.
+\item \textbf{Seleccion}: En esta etapa, se seleccionan los cromosomas más aptos para reproducirse y formar la próxima generación de la población. Los métodos de selección pueden variar, pero generalmente se utiliza la selección por torneo o la selección proporcional al valor de aptitud.
 
-\item \textttt{Cruce}: En esta etapa, se aplican operadores de cruce a los cromosomas seleccionados. El cruce combina los genes de dos cromosomas para generar uno o más descendientes. El tipo de cruce depende del problema y se selecciona según su eficacia para explorar el espacio de soluciones.
+\item \textbf{Cruce}: En esta etapa, se aplican operadores de cruce a los cromosomas seleccionados. El cruce combina los genes de dos cromosomas para generar uno o más descendientes. El tipo de cruce depende del problema y se selecciona según su eficacia para explorar el espacio de soluciones.
 
-\item \textttt{Mutacion}: En esta etapa, se aplican operadores de mutación a los cromosomas seleccionados. La mutación introduce cambios aleatorios en un cromosoma para explorar nuevas regiones del espacio de soluciones. La tasa de mutación controla la probabilidad de que ocurra una mutación en un gen dado.
+\item \textbf{Mutacion}: En esta etapa, se aplican operadores de mutación a los cromosomas seleccionados. La mutación introduce cambios aleatorios en un cromosoma para explorar nuevas regiones del espacio de soluciones. La tasa de mutación controla la probabilidad de que ocurra una mutación en un gen dado.
 
-\item \textttt{Reemplazo}: En esta etapa, se reemplazan los cromosomas menos aptos en la población por los descendientes generados mediante el cruce y la mutación. Esto permite que los cromosomas más aptos sobrevivan y transmitan sus características a las siguientes generaciones.
+\item \textbf{Reemplazo}: En esta etapa, se reemplazan los cromosomas menos aptos en la población por los descendientes generados mediante el cruce y la mutación. Esto permite que los cromosomas más aptos sobrevivan y transmitan sus características a las siguientes generaciones.
 
-\item \textttt{Convergencia}: El algoritmo genético se repite durante un número determinado de iteraciones o hasta que se cumpla un criterio de convergencia. Este criterio puede ser un número máximo de generaciones, una aptitud objetivo alcanzada o la estabilización de la aptitud promedio de la población.
+\item \textbf{Convergencia}: El algoritmo genético se repite durante un número determinado de iteraciones o hasta que se cumpla un criterio de convergencia. Este criterio puede ser un número máximo de generaciones, una aptitud objetivo alcanzada o la estabilización de la aptitud promedio de la población.
 \end{itemize}
-\\
+
 En resumen, los algoritmos genéticos son una herramienta poderosa y versátil para abordar problemas de optimización y búsqueda en una amplia gama de campos. Su capacidad para explorar ampliamente el espacio de soluciones y su capacidad para manejar problemas complejos los convierten en una opción atractiva para resolver desafíos en diversos dominios.
 
 En esta tesis, nos enfocamos en el uso de AGs para buscar subconjunto de métodos de la API que sean builders. Esto lo hablaremos en detalle en el Capítulo \ref{cap:builders}. Para mas informacion sobre Algoritmo Genticos, puede referirse a \cite{dejong2006evolutionary} 
 
 
-\section{Objects? algo sobre serializacion y obejtcos}
+\section{Algotirmos Perezosos? (Greedy)}
+
+El algoritmo Greedy es una estrategia de resolución de problemas que sigue un enfoque voraz, tomando decisiones locales óptimas en cada etapa con la esperanza de llegar a una solución global óptima. A diferencia de otros enfoques, el algoritmo Greedy no realiza una búsqueda exhaustiva en el espacio de soluciones, sino que se centra en elegir la mejor opción disponible en cada momento.
+
+El enfoque Greedy se basa en la idea de que, al tomar decisiones óptimas en cada etapa, se puede obtener una solución aproximadamente óptima para el problema en general. Sin embargo, debido a su naturaleza voraz, el algoritmo Greedy puede no garantizar una solución óptima en todos los casos. En algunos casos, el algoritmo puede llegar a un óptimo local, pero no a un óptimo global. Por lo tanto, es importante tener en cuenta las limitaciones y restricciones del problema al aplicar el algoritmo Greedy.
+
+\begin{algorithm}[H]
+  \SetAlgoLined
+  \SetKwInOut{Input}{Input}
+  \SetKwInOut{Output}{Output}
+  \SetKwFunction{Greedy}{Greedy}
+
+  \caption{Greedy Algorithm}
+
+  \Input{Set $S$}
+  \Output{Solution $R$}
+
+  \BlankLine
+  $R \gets \emptyset$ 
+  $U \gets S$ \tcp*{Set of available elements}
+
+  \BlankLine
+  \While{$U \neq \emptyset$}{
+    $x \gets$ element selected according to Greedy criteria
+    
+    $R \gets R \cup \{x\}$ \tcp*{Add $x$ to the solution}
+    $U \gets U \setminus \{x\}$ \tcp*{Remove $x$ from available elements}
+  }
+
+  \BlankLine
+  \Return $R$ 
+
+\end{algorithm}
+
+El algoritmo comienza con un conjunto de elementos disponibles y un conjunto solución vacío. En cada iteración, se selecciona el elemento óptimo según la función de heurística para los estados que se haya implementado y se agrega a la solución. Luego, se elimina ese elemento de los disponibles y se repite el proceso hasta que no queden elementos disponibles.
+
+Es importante tener en cuenta que el algoritmo Greedy no garantiza encontrar la solución óptima en todos los casos, ya que puede quedarse atrapado en mínimos locales. Sin embargo, en muchos casos, el enfoque Greedy proporciona soluciones rápidas y razonables.
+
+En esta tesis se personalizó el algoritmo para detectar subconjuntos óptimos de métodos \emph{builders}. 
+Para mas informacion sobre este tipo de algoritmos, invitamos al lector referirse a \cite{Cormen2009}, \cite{kleinberg2006}
+
 \section{Coverage?}
 
